# pipedal

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  DartConfiguration.tcl  Gemfile  LICENSE.md  LICENSE.txt  README.md  a.out  build-prod.sh  capture_presets  configuration_notes.txt  debugDocs.sh  downloadCounts.sh  funding.json  init  init.sh  install  install.sh  installdbg  makePackage.sh  mk  package  plotDownloads.sh  previewPages  previewPages.sh  provisionLv2  provisionLv2-aarch64.sh  provisionLv2-x64.sh  react-config  reset_presets  run.sh  signPackage.sh  todo.txt  uninstall  uninstall.sh  valgrind.sh  vg.output
NetworkManagerP2P/src/: CMakeLists.txt  CommandLineParser.hpp  DBusDispatcher.cpp  DBusDispatcher.hpp  DBusEvent.hpp  DBusLog.cpp  DBusLog.hpp  DBusVariantHelper.cpp  DBusVariantHelper.hpp  DnsMasqService.cpp.bak  DnsMasqService.hpp.bak  Install.cpp  Install.hpp  NMManager.cpp  NMManager.hpp  NMP2pSettings.cpp  NMP2pSettings.hpp  NetworkManagerInterfaces.cpp  NetworkManagerInterfaces.hpp  P2PManager.cpp  P2PManager.cpp.bak  P2PManager.hpp  P2PManager.hpp.bak  SignalHandler.cpp  SignalHandler.hpp  Sudo.cpp  Sudo.hpp  WpaInterfaces.cpp  WpaInterfaces.hpp  gen-dbus-imports.sh  main.cpp  ss.hpp  tmp.txt  wpa_init
NetworkManagerP2P/src/dbus/: server-bindings.xml
NetworkManagerP2P/src/dbus/hpp/: f1.w1.wpa_supplicant1.Group.hpp  f1.w1.wpa_supplicant1.Interfaces.hpp  f1.w1.wpa_supplicant1.Peer.hpp  fi.w1.wpa_supplicant1.hpp  org.freedesktop.DBus.Properties.hpp  org.freedesktop.NetworkManager.AgentManager.hpp  org.freedesktop.NetworkManager.Checkpoint.hpp  org.freedesktop.NetworkManager.Connection.Active.hpp  org.freedesktop.NetworkManager.DHCP4Config.hpp  org.freedesktop.NetworkManager.Device.Bond.hpp  org.freedesktop.NetworkManager.Device.Dummy.hpp  org.freedesktop.NetworkManager.Device.Generic.hpp  org.freedesktop.NetworkManager.Device.Loopback.hpp  org.freedesktop.NetworkManager.Device.Modem.hpp  org.freedesktop.NetworkManager.Device.Statistics.hpp  org.freedesktop.NetworkManager.Device.WireGuard.hpp  org.freedesktop.NetworkManager.Device.Wired.hpp  org.freedesktop.NetworkManager.Device.Wireless.hpp  org.freedesktop.NetworkManager.Device.Wpan.hpp  org.freedesktop.NetworkManager.Device.hpp  org.freedesktop.NetworkManager.IP4Config.hpp  org.freedesktop.NetworkManager.PPP.hpp  org.freedesktop.NetworkManager.SecretAgent.hpp  org.freedesktop.NetworkManager.Settings.hpp  org.freedesktop.NetworkManager.VPN.Connection.hpp  org.freedesktop.NetworkManager.VPN.Plugin.hpp  org.freedesktop.NetworkManager.WiMax.Nsp.hpp
NetworkManagerP2P/src/dbus/xml/: f1.w1.wpa_supplicant1.Interfaces.xml
PiPedalCommon/src/: AlsaSequencer.cpp  CMakeLists.txt  ChannelInfo.cpp  ConfigSerializer.cpp  ConfigUtil.cpp  DBusDispatcher.cpp  DBusEvent.cpp  DBusLog.cpp  DBusVariantHelper.cpp  HtmlHelper.cpp  Lv2Log.cpp  NetLinkChannelInfo.cpp  NetLinkChannelInfo.cpp.bak  NetworkManagerInterfaces.cpp  RegDb.cpp  ServiceConfiguration.cpp  SysExec.cpp  Utf8Utils.cpp  WifiConfigSettings.cpp  WifiDirectConfigSettings.cpp  WifiRegs.cpp  WifiRegulations.cpp  WriteTemplateFile.cpp  json.cpp  json_variant.cpp  ofstream_synced.cpp  ss.hpp  util.cpp
PiPedalCommon/src/include/: AlsaSequencer.hpp  ChannelInfo.hpp  ConfigSerializer.hpp  ConfigUtil.hpp  DBusDispatcher.hpp  DBusEvent.hpp  DBusLog.hpp  EnumFlags.hpp  Finally.hpp  HtmlHelper.hpp  Lv2Log.hpp  NetLinkChannelInfo.hpp.bak  NetLinkChannelInfo.hpp.x  NetworkManagerInterfaces.hpp  P2pConfigFiles.hpp  RegDb.hpp  ServiceConfiguration.hpp  SysExec.hpp  Utf8Utils.hpp  WifiConfigSettings.hpp  WifiDirectConfigSettings.hpp  WifiRegs.hpp  WifiRegulations.hpp  WriteTemplateFile.hpp  autoptr_vector.h  json.hpp  json_variant.hpp  ofstream_synced.hpp  restrict.hpp  util.hpp
PiPedalCommon/src/include/dbus/: org.freedesktop.NetworkManager.AccessPoint.hpp  org.freedesktop.NetworkManager.Connection.Active.hpp  org.freedesktop.NetworkManager.DHCP4Config.hpp  org.freedesktop.NetworkManager.DHCP6Config.hpp  org.freedesktop.NetworkManager.Device.Statistics.hpp  org.freedesktop.NetworkManager.Device.WifiP2P.hpp  org.freedesktop.NetworkManager.Device.Wireless.hpp  org.freedesktop.NetworkManager.Device.hpp  org.freedesktop.NetworkManager.DnsManager.hpp  org.freedesktop.NetworkManager.IP4Config.hpp  org.freedesktop.NetworkManager.IP6Config.hpp  org.freedesktop.NetworkManager.Settings.Connection.hpp  org.freedesktop.NetworkManager.Settings.hpp  (+2 more)
modules/: CMakeLists.txt
src/: AdminClient.cpp  AdminClient.hpp  AdminInstallUpdate.cpp  AdminInstallUpdate.hpp  AdminMain.cpp  AesDigest.cpp  AesDigest.hpp  AlsaDriver.cpp  AlsaDriver.hpp  AlsaDriverTest.cpp  ArmPerformanceCounters.hpp  AtomBuffer.hpp  AtomConverter.cpp  AtomConverter.hpp  AtomConverterTest.cpp  AudioConfig.hpp  AudioDriver.hpp  AudioFileMetadata.cpp  AudioFileMetadata.hpp  AudioFileMetadataReader.cpp  AudioFileMetadataReader.hpp  AudioFiles.cpp  AudioFiles.hpp  AudioFilesDb.cpp  AudioFilesDb.hpp  AudioFilesTest.cpp  AudioHost.cpp  AudioHost.hpp  AutoLilvNode.cpp  AutoLilvNode.hpp  AuxIn.cpp  AuxIn.hpp  AuxInTest.cpp  AvahiService.cpp  AvahiService.hpp  AvahiServiceTest.cpp  Banks.cpp  Banks.hpp  Base64.hpp  BeastServer.cpp  (+289 more)
src/dbus/: bluez.h  bluez.xml  bluez_adaptor.h  bluez_proxy.h  bluez_test.cpp
src/ext/PiPedal/: FileMetadataFeature.h
src/gsl/: README.txt
src/polkit-1/55-org.pipedal.d/: 55-org.freedesktop.NetworkManager.pkla
src/polkit-1/rules/: 10-pipedal-networkmanager.rules  55-pipedal-networkmanager.rule
src/templates/: 30-pipedal-apd.conf  30-pipedal-p2p-dnsmasq-nm.conf  30-pipedal-p2p.conf  50-pipedal-nm.conf  dnsmasq-pipedal-nm.conf  jack.service.template  pipedal_nm_p2pd.service.template  pipedal_p2pd.conf.template  pipedal_p2pd.service.template  pipedaladmind.service.template  pipedald.service.template  var_config.json  wpa_supplicant-pipedal.conf
src/vst3/: Vst3Effect.hpp  Vst3EffectImpl.hpp  Vst3Host.hpp  Vst3PresetFile.hpp  Vst3RtStream.hpp
test/: BeastServerTest.cpp  CMakeLists.txt  JsonTest.cpp  Lv2HostLeakTest.cpp  Lv2Test.cpp  UriTest.cpp  main.cpp  pch.h
(+650 files in other folders)
